# writeMeAStory

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DockerFile  DockerFile.optimized  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci-cd.yml
client/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
client/src/Pages/Home/: Home.tsx
client/src/Pages/Home/Common/: socket.interface.ts
client/src/Pages/Home/Components/: ConnectionStatus.tsx  Footer.tsx  Header.tsx  SettingsPanel.tsx
client/src/Pages/Home/Hooks/: useSocketIO.tsx
frontend/: package-lock.json  package.json  tsconfig.node.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  StoryGenerator.tsx  main.tsx
frontend/src/Pages/Home/: Home.tsx
frontend/src/Pages/Home/Common/: socket.interface.ts  types.ts
scripts/: docker-dev.sh  docker-prod.sh  docker-test.sh
server/: deploy_modal.py  modal_app.py  preprocess_hf_dataset.py  pretrain_data.json  pretrain_val.json  pyproject.docker.toml  pyproject.toml  pytest.ini  requirements.txt
server/app/: main.py
server/app/core/: modal_story_generator.py  socket_manager.py  story_generator.py
server/app/model/: preprocessowt.py  transformer.py  transformer_proper.py  transformer_v2.py
server/app/schemas/: story.py
server/model/: transformer.py
server/scripts/: benchmark_model.py
server/tests/: test_basic.py  test_generator.py  test_ml_validation.py  test_modal_integration.py  test_production_ready.py
(+7 files in other folders)
